crates/biome_html_parser/tests/html_specs/ok/svelte/await_no_catch.svelte
{#await promise}
  <p>Loading...</p>
{:then value}
  <p>The value is {value}</p>
{/await}
