crates/biome_html_parser/tests/html_specs/error/svelte/await_missing_close.svelte
{#await promise then value}
  <p>The value is {value}</p>
